5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1602_825.log
== TEST (2019-03-31 21:37:25) 
-- CODE:
r=float(input("digite o valor do raio:"))

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:38:09) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=print(pi*r**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=print(pi*r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:38:16) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=print(pi*r**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=print(pi*r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:38:17) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=print(pi*r**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=print(pi*r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:12) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(pi)*(r**2)
volume=(4/3)*pi*(r**3)
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(pi)*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:12) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(pi)*(r**2)
volume=(4/3)*pi*(r**3)
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(pi)*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:17) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(pi)*(r**2)
volume=(4/3)*pi*(r**3)
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(pi)*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:30) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=pi*(r**2)
volume=(4/3)*pi*(r**3)
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:41:32) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=pi*(r**2)
volume=(4/3)*pi*(r**3)
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:42:12) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(pi)*(r**2)
volume=(4/3)*pi*(r**3)
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(pi)*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:42:33) 
-- CODE:
r=float(input("digite o valor do raio:"))
pi=3,14
area=(pi)*(r**2)
volume=(4/3)*pi*(r**3)
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area=(pi)*(r**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:44:02) 
-- CODE:
r=float(input("digite o valor do raio:"))
pi=3,14
area=float((pi)*(r**2))
volume=float((4/3)*pi*(r**3))
print(area)
print(volume)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area=float((pi)*(r**2))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:45:30) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(area)
print(volume)

-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:45:40) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(area)
print(volume)

-- EXECUTION TIME:
0.15973
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.585
381.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.14538400000004
7867.085384746666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:45:44) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(area)
print(volume)

-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:45:53) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(area)
print(volume)

-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:46:47) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:47:13) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.1415)*(r**2)
volume=(4/3)*3.1415*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
63.615
381.692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:48:01) 
-- CODE:
r=float(input("digite o valor do raio:"))
pi=3,14159265358
area=(pi)*(r**2)
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area=(pi)*(r**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:48:47) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3,14159265358)*(r**2)
volume=(4/3)*3,14159265358*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(3,14159265358)*(r**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:49:30) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3,141592)*(r**2)
volume=(4/3)*3,141592*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(3,141592)*(r**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:49:45) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3,141)*(r**2)
volume=(4/3)*3,141(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(3,141)*(r**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:50:47) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=pi*(r**2)
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:51:35) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=3.14*(r**2)
volume=(4/3)*3.14(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    volume=(4/3)*3.14(r**3)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:52:10) 
-- CODE:
r=float(input("digite o valor do raio:"))
pi=3,1415
area=(pi)*(r**2)
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area=(pi)*(r**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:52:25) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:52:30) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.206903
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.585
381.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.145
7867.085
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:52:32) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(3.14)*(r**2)
volume=(4/3)*3.14*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
63.585
381.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:57:50) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(pi(r**2))
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(pi(r**2))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:58:08) 
-- CODE:
r=float(input("digite o valor do raio:"))
area=(pi*(r**2))
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(pi*(r**2))
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:58:34) 
-- CODE:
r=float(input("digite o valor do raio:"))
area= pi*(r**2)
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area= pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:58:47) 
-- CODE:
r=float(input("digite o valor do raio:"))
area= pi *(r**2)
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area= pi *(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:59:55) 
-- CODE:
r=float(input("digite o valor do raio:"))
from math import*
area= pi *(r**2)
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:00:03) 
-- CODE:
r=float(input("digite o valor do raio:"))
from math import*
area= pi *(r**2)
volume=(4/3)*pi*(r**3)
print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.189797
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
